--- a/classic_transformer/testing.ipynb
+++ b/classic_transformer/testing.ipynb
@@ -2,21 +2,87 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\steve\\repos\\BundtCake\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\joshu\\BrawlhallaReplays\\.bin\\archive\\repos\\BundtCake\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
    "source": [
     "from datasets import load_dataset\n",
-    "import tiktoken"
+    "import tiktoken\n",
+    "from multiprocessing import Pool\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\joshu\\BrawlhallaReplays\\.bin\\archive\\repos\\BundtCake\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:140: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\joshu\\.cache\\huggingface\\hub\\datasets--Stegvean--CakeGenomes. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n",
+      "Generating train split: 214839 examples [01:17, 2754.78 examples/s]\n",
+      "Generating test split: 86848 examples [00:30, 2809.63 examples/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['text'],\n",
+       "        num_rows: 214839\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['text'],\n",
+       "        num_rows: 86848\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset = load_dataset(\"Stegvean/CakeGenomes\")\n",
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdataset\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dataset' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "dataset"
    ]
   },
   {
@@ -25,18 +91,129 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = load_dataset(\"Stegvean/CakeGenomes\")\n",
-    "dataset"
+    "# split dataset\n",
+    "split_dataset = dataset[\"train\"].train_test_split(test_size=0.1, shuffle=True)\n",
+    "split_dataset[\"val\"] = split_dataset.pop('test') \n",
+    "[split_dataset[\"train\"][i] for i in range(5)]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# split dataset\n",
-    "split_dataset = dataset[\"train\"].train_test_split(test_size=0.1, shuffle=True)\n",
-    "split_dataset[\"val\"] = split_dataset.pop('test') \n",
-    "[split_dataset[\"train\"][i] for i in range(10)]"
+    "### tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Pool' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Process dataset in parallel using multiprocessing\u001b[39;00m\n\u001b[0;32m      9\u001b[0m num_proc \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m18\u001b[39m  \u001b[38;5;66;03m# Adjust based on your CPU cores\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mPool\u001b[49m(num_proc) \u001b[38;5;28;01mas\u001b[39;00m pool:\n\u001b[0;32m     11\u001b[0m     results \u001b[38;5;241m=\u001b[39m pool\u001b[38;5;241m.\u001b[39mmap(extract_unique, dataset[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39miter(batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m))\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Combine results to get the final unique set\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Pool' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from foo import extract_unique\n",
+    "\n",
+    "# Process dataset in parallel using multiprocessing\n",
+    "num_proc = 18  # Adjust based on your CPU cores\n",
+    "with Pool(num_proc) as pool:\n",
+    "    results = pool.map(extract_unique, dataset[\"train\"].iter(batch_size=1000))\n",
+    "\n",
+    "# Combine results to get the final unique set\n",
+    "unique_gene_ids = set().union(*results)\n",
+    "\n",
+    "print(unique_gene_ids)\n",
+    "vocab_size = len(unique_gene_ids)\n",
+    "print(vocab_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export tokenizer data\n",
+    "import json\n",
+    "json.dump(\n",
+    "    {\"id_vocab\": unique_gene_ids, \"vocab_size\": vocab_size}, \n",
+    "    open(\"tokenizer_data.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'unique_gene_ids' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m id_to_int \u001b[38;5;241m=\u001b[39m { \u001b[38;5;28mid\u001b[39m:i \u001b[38;5;28;01mfor\u001b[39;00m i,\u001b[38;5;28mid\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[43munique_gene_ids\u001b[49m)}\n\u001b[0;32m      2\u001b[0m int_to_id \u001b[38;5;241m=\u001b[39m { i:\u001b[38;5;28mid\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i,\u001b[38;5;28mid\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(unique_gene_ids)}\n\u001b[0;32m      3\u001b[0m encode \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m id_list: [id_to_int[\u001b[38;5;28mid\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m \u001b[38;5;28mid\u001b[39m \u001b[38;5;129;01min\u001b[39;00m id_list]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'unique_gene_ids' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "id_to_int = { id:i for i,id in enumerate(unique_gene_ids)}\n",
+    "int_to_id = { i:id for i,id in enumerate(unique_gene_ids)}\n",
+    "encode = lambda id_list: [id_to_int[id] for id in id_list]\n",
+    "decode = lambda int_list: [int_to_id[i] for i in int_list]\n",
+    "\n",
+    "process = lambda id_str: encode(id_str.split(\" \"))\n",
+    "print(encode(\"WP_#####.1\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenized = split_dataset.map(\n",
+    "    process,\n",
+    "    remove_columns=['text'],\n",
+    "    desc=\"tokenizing the splits\",\n",
+    "    num_proc=num_proc,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# concatenate all the ids in each dataset into one large file we can use for training\n",
+    "for split, dset in tokenized.items():\n",
+    "    arr_len = np.sum(dset['len'], dtype=np.uint64)\n",
+    "    filename = os.path.join(os.path.dirname(__file__), f'{split}.bin')\n",
+    "    dtype = np.uint16 # (can do since enc.max_token_value == 50256 is < 2**16)\n",
+    "    arr = np.memmap(filename, dtype=dtype, mode='w+', shape=(arr_len,))\n",
+    "    total_batches = 1024\n",
+    "\n",
+    "    idx = 0\n",
+    "    for batch_idx in tqdm(range(total_batches), desc=f'writing {filename}'):\n",
+    "        # Batch together samples for faster write\n",
+    "        batch = dset.shard(num_shards=total_batches, index=batch_idx, contiguous=True).with_format('numpy')\n",
+    "        arr_batch = np.concatenate(batch['ids'])\n",
+    "        # Write into mmap\n",
+    "        arr[idx : idx + len(arr_batch)] = arr_batch\n",
+    "        idx += len(arr_batch)\n",
+    "    arr.flush()\n"
    ]
   }
  ],
@@ -56,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
